tests/result_clang/_test.pxd

# This code was automatically generated by CWrap version 0.0.0

cdef extern from "test.h":

    int m
    ctypedef long long int LLong

    cdef struct Foo:
        int a
        LLong b

    cdef struct _Bar:
        double b

    ctypedef _Bar Bar

    ctypedef enum Baz:
        ONE
        TWO
        THREE
        FOUR
        FIVE


    ctypedef Baz Spam

    ctypedef Foo Eggs

    cdef struct __AUnion__sNested:
        signed char *data

    ctypedef __AUnion__sNested __AUnion__sNested_t

    cdef union AUnion:
        int a
        double b
        long double c
        __AUnion__sNested_t nested_data
        float *data

    cdef union ___Astruct__uNested:
        int a
        double b
        long double c
        __AUnion__sNested_t nested_data
        float *data

    ctypedef ___Astruct__uNested ___Astruct__uNested_t

    cdef struct _Astruct:
        Eggs *eggsPtr
        ___Astruct__uNested_t nested_data

    ctypedef _Astruct Astruct

    int *foo_bar(double t, Bar *barptr)

    double *((*crazy_fn(int *, signed char *, Baz))[10])

    ctypedef signed char *((*(*crazy_fn_ptr_)(void *))[42])

    cdef struct AnotherFoo:
        int (*func)(double, int *)

    float (*returns_func_ptr(int foo))(float, float)

    double *(*(*(*returns_func_ptr_nested(signed char *))(int, double))(int, long int))(signed char *)

    cdef struct CrazyField:
        signed char *(*(*crazy_ptr)(int))(float *)

    double (*func_ptr_var)()
    int (*(*func_ptr_func_ptr_var)())()

